salesforce/force-app/main/default/objects/Lead/fields/Apollo_Email_Count__c.field-meta.xml
<CustomField>
    <fullName>Apollo_Email_Count__c</fullName>
    <description>Total number of emails sent to this lead via Apollo.</description>
    <inlineHelpText>Total Apollo emails sent to this lead.</inlineHelpText>
    <label>Apollo Email Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>