salesforce/force-app/main/default/objects/Lead/fields/Apollo_Last_Opened__c.field-meta.xml
<CustomField>
    <fullName>Apollo_Last_Opened__c</fullName>
    <description>Date and time of the last email open tracked by Apollo.</description>
    <inlineHelpText>When the lead last opened an Apollo email.</inlineHelpText>
    <label>Apollo Last Opened</label>
    <type>DateTime</type>
</CustomField>