salesforce/force-app/main/default/objects/Lead/fields/Apollo_Last_Received__c.field-meta.xml
<CustomField>
    <fullName>Apollo_Last_Received__c</fullName>
    <description>Date and time of the last reply received from this lead via Apollo.</description>
    <inlineHelpText>When the lead last replied to an Apollo email.</inlineHelpText>
    <label>Apollo Last Received</label>
    <type>DateTime</type>
</CustomField>