salesforce/force-app/main/default/objects/Lead/fields/Apollo_Last_Sent__c.field-meta.xml
<CustomField>
    <fullName>Apollo_Last_Sent__c</fullName>
    <description>Date and time of the last outbound email sent via Apollo.</description>
    <inlineHelpText>Last outbound email sent through Apollo.</inlineHelpText>
    <label>Apollo Last Sent</label>
    <type>DateTime</type>
</CustomField>