salesforce/force-app/main/default/objects/Lead/fields/Apollo_Status__c.field-meta.xml
<CustomField>
    <fullName>Apollo_Status__c</fullName>
    <description>Current status of this lead in Apollo sequence.</description>
    <inlineHelpText>Status of Apollo outreach for this lead.</inlineHelpText>
    <label>Apollo Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Replied</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>