salesforce/force-app/main/default/objects/Lead/fields/First_Outreach_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Outreach_Date__c</fullName>
    <description>Date when this lead was first contacted by a Business Lead.</description>
    <inlineHelpText>When was this lead first contacted?</inlineHelpText>
    <label>First Outreach Date</label>
    <type>Date</type>
</CustomField>