salesforce/force-app/main/default/objects/Lead/fields/LinkedIn_Connection_Status__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Connection_Status__c</fullName>
    <description>Current LinkedIn connection status with this lead.</description>
    <inlineHelpText>LinkedIn connection status.</inlineHelpText>
    <label>LinkedIn Connection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
                <default>true</default>
                <label>Not Sent</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>