salesforce/force-app/main/default/objects/Lead/fields/LinkedIn_InMail_Sent__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_InMail_Sent__c</fullName>
    <description>Indicates whether a LinkedIn InMail was sent to this lead via Sales Navigator.</description>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if an InMail was sent via Sales Navigator.</inlineHelpText>
    <label>LinkedIn InMail Sent</label>
    <type>Checkbox</type>
</CustomField>